@@ -2,29 +2,23 @@ plugins {
     id("java")
 }
 
-group = "org.example"
-
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation("org.atteo.classindex:classindex:3.13")
-    annotationProcessor("org.atteo.classindex:classindex:3.13") // for gradle 5.0+
+subprojects {
 
-    testImplementation("org.assertj:assertj-core:3.24.2")
-    testImplementation(platform("org.junit:junit-bom:5.9.2"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-}
-java {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
-}
+//    plugins {
+//        id("java")
+//    }
 
-tasks.test {
-    useJUnitPlatform()
-    jvmArgs("--enable-preview")
-}
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
+    apply plugin: "java"
+
+    repositories {
+        mavenCentral()
+    }
+
+    java {
+        sourceCompatibility = JavaVersion.toVersion("17")
+    }
 }
